[gd_scene load_steps=5 format=3 uid="uid://byxm21nqjg1gx"]

[ext_resource type="PackedScene" uid="uid://bsc5htx4smq2u" path="res://Scenes/Entities/submersable.tscn" id="1_cv5s0"]
[ext_resource type="Script" path="res://Scripts/Level Scripts/level.gd" id="1_qg62l"]
[ext_resource type="PackedScene" uid="uid://cppth4p4c146q" path="res://Scenes/Entities/player.tscn" id="2_vgux5"]
[ext_resource type="PackedScene" uid="uid://8ikktsj8n68g" path="res://Scenes/Systems/hole_controller.tscn" id="3_x3kxh"]

[node name="Level" type="Node2D"]
script = ExtResource("1_qg62l")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Depth" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="DepthLabel" type="Label" parent="UI/Depth"]
layout_mode = 0
offset_left = 8.0
offset_top = 620.0
offset_right = 100.0
offset_bottom = 643.0
text = "Depth:  0 m"

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="WaterFill" type="ProgressBar" parent="UI/Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 33.0
offset_right = 91.0
offset_bottom = 60.0

[node name="Label" type="Label" parent="UI/Control"]
layout_mode = 0
offset_left = 8.0
offset_top = 4.0
offset_right = 100.0
offset_bottom = 27.0
text = "Water Level"

[node name="Submersable" parent="." instance=ExtResource("1_cv5s0")]
position = Vector2(1, 2)

[node name="HoleController" parent="." instance=ExtResource("3_x3kxh")]

[node name="Player" parent="." instance=ExtResource("2_vgux5")]
position = Vector2(82, 148)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(0, -80)
position_smoothing_enabled = true
